--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -4,12 +4,18 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
+    "@popmotion/popcorn": "^0.4.4",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "antd": "^4.9.4",
+    "framer-motion": "^3.1.1",
+    "popmotion": "^9.0.2",
+    "rc-scroll-anim": "^2.7.6",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
